[package]
name = "bls-proto-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blstrs = "0.7"
blst = "0.3"
rand = "0.8"
ff = "0.13"
group = "0.13"
pairing_lib = { version = "0.23.0", package = "pairing" }
secp256k1 = { version = "0.29", features = ["rand-std", "hashes-std"] }
